--- a/ca09_group3_project.Rmd
+++ b/ca09_group3_project.Rmd
@@ -41,18 +41,9 @@ library(viridis)
 library(vroom)
 ```
 
+# Introduction #
 
-
-
-In your final group assignment you have to analyse data about Airbnb listings and fit a model to predict the total cost for two people staying 4 nights in an AirBnB in a city. You can download AirBnB data from [insideairbnb.com](http://insideairbnb.com/get-the-data.html){target="_blank"}; it was originally scraped from airbnb.com. 
-
-The following [Google sheet](https://docs.google.com/spreadsheets/d/1QrR-0PUGVWvDiVQL4LOk7w-xXwiDnM3dDtW6k15Hc7s/edit?usp=sharing) shows which cities you can use; please choose one of them and add your group name next to it, e.g., A7, B13. No city can have more than 2 groups per stream working on it; if this happens, I will allocate study groups to cities with the help of R's sampling.
-
-
-All of the listings are a GZ file, namely they are archive files compressed by the standard GNU zip (gzip) compression algorithm. You can download, save and extract the file if you wanted, but `vroom::vroom()` or `readr::read_csv()` can immediately read and extract this kind of a file. You should prefer `vroom()` as it is faster, but if vroom() is limited by a firewall, please use `read_csv()` instead.
-
-
-`vroom` will download the *.gz zipped file, unzip, and provide you with the dataframe. 
+This coursework focuses on applying a multivariate linear regression model to predict the total cost for two people staying 4 nights in an Airbnb in Austria. The data set is large and complex (non-numerical values, variables with several NA values...), so we are careful and conservative with the steps taken. In the exploratory analysis section, we first start by analysing the data to identify correlations and relationships. We also make sure to tidy up the data by adjusting the relevant variables. This analysis is further illustrated by some visualisations, which will allow us to make assumptions for our regression analysis. The next step consists of applying backward stepwise regression: We start with the full linear regression model and sequentially delete the predictor that has least input on the fit. We stop when all variables are statistically significant at the 5%. The methodology has been well-researched, so our contribution is largely empirical. We discover that the price estimates are on mostly in-line with our conjectures (neighbourhood, ratings...). The analysis has been performed in R.
 
 
 ```{r load_data, echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
